--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <nav id="top">
         <ul class="left">
             <li>
-                <a class="home" data-transition="slidedown" href="#page"><img src="img/home.png"></a>
+                <a class="home" data-transition="slide" href="#page"><img src="img/home.png"></a>
             </li>
             <li>
                 <a class="back" href="#" onclick="window.history.back()"><img src="img/back.png"></a>
@@ -246,7 +246,7 @@
       <a id="btnpayment" href='#payment'></a>
      <input type="submit" id="btnsubmitreg" value="Register!" class='btn btn-primary' />
       
-       <a data-transition="slidedown" href="#register" class="hidden btnregister" id="btnpayment"></a>
+       <a data-transition="slide" href="#register" class="hidden btnregister" id="btnpayment"></a>
       </div>
     
   
@@ -272,7 +272,7 @@
 </div><!-- dateseparator -->
 
 <div class="logincontrols">
-<a class="cbtn" data-role="none" data-transition="slidedown"  href="#register">Continue</a>
+<a class="cbtn" data-role="none" data-transition="slide"  href="#register">Continue</a>
 </div><!-- logincontrols -->
 <div class="disclaimer">
 By signing up, I agree to Deliva’s <a href="#">Terms of Service</a>, <a href="#">Privacy</a>, and <a href="#">Host Guarantee Terms</a>.
@@ -305,7 +305,7 @@ $(function() {
 	});
 });
 </script>
-<a class="lnkgateway hidden" data-transition="slidedown" href="#gateway"></a>
+<a class="lnkgateway hidden" data-transition="slide" href="#gateway"></a>
 <button type="button" id="DialogTrigger" data-loading-text="Loading..." class="hidden"></button>
 <input type="hidden" id="rooturl" value="http://kendevs.com/deliva/" rel="http://localhost/deliva/" />
 
