--- a/index.html
+++ b/index.html
@@ -254,8 +254,8 @@
   </div>
 </div><!-- register -->
 <div data-role="page" id="gateway">
-  <div data-role="content">
-  <div class="contentholder">
+  <div  data-role="content">
+  <div id="gatewaycont" class="contentholder">
 <p class="confirmage">Please confirm that you are above legal drinking age</p>
 <div class="dateseparator">
 <span>Date</span>
