--- a/index.html
+++ b/index.html
@@ -272,7 +272,8 @@
 </div><!-- dateseparator -->
 
 <div class="logincontrols">
-<a class="cbtn" data-role="none" data-transition="slide"  href="#register">Continue</a>
+<a class="cbtn registerbtn" data-role="none" href="#">Continue</a>
+<a class="cbtn registerhidden hidden" data-role="none" data-transition="slide"  href="#register"></a>
 </div><!-- logincontrols -->
 <div class="disclaimer">
 By signing up, I agree to Deliva’s <a href="#">Terms of Service</a>, <a href="#">Privacy</a>, and <a href="#">Host Guarantee Terms</a>.
