--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
                                 <div class="tab-pane active" id="tab-description">
                                     tab-description
                                 </div>
+                                 <div class="tab-pane active" id="tab-review">
+                                    <p>Currently being implemented.</p>
+                                </div>
                             </div>
                         </div>
                         
