--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html> 
-<html>
+<html class="no-js">
 <head>
 <meta charset="utf-8">
 <title>Deliva</title>
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="css/font-awesome/css/font-awesome.min.css">
 <script src="jquery-mobile/jquery-1.8.3.min.js" type="text/javascript"></script>
 <script src="jquery-mobile/jquery.mobile-1.3.0.min.js" type="text/javascript"></script>
-
+<script src="js/modernizr-latest.js" type="text/javascript"></script>
 <script src="cordova.js" type="text/javascript"></script>
 
 <script type="text/javascript" src="js/productlist.js"></script>
@@ -301,7 +301,7 @@ $(function() {
 	$( "#Dialog1" ).dialog({
 		title:"Information",
 		hide:{effect: "slide"},
-		show:{effect: "puff"},
+		show:{effect: "slide"},
 		autoOpen:false
 	});
 	$( "#DialogTrigger" ).click(function(){
