--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="loader">
         <img src="images/ajaxloader.gif" />
         <label style="font-size: 16px;font-weight: bold;overflow: hidden;position: relative;top:10px;width: 80px;;">
-            In a sec!
+            In a Sec!
         </label>
     </div>
  </div> <!-- overlay -->
