--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                             
                              <ul class="nav nav-tabs">
                                     <li class="active">
-                                        <a href="#tab-description" data-toggle="tab">Description</a>
+                                        <a class="tab-description" href="#tab-description" data-toggle="tab">Description</a>
                                     </li>
                                     <li>
                                         <a href="#tab-review" class="lnkreview" data-toggle="tab">Reviews</a>
