--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                                      <textarea class="required" cols="40" rows="8" name="review" id="txtReviews"></textarea>
                                       </fieldset>
                                    </div>
-                                   <div data-role="fieldcontain">
+                                   <div data-role="fieldcontain" style="padding-top:10px">
                                      <fieldset data-role="none">
                                        <legend>Rating</legend>
                                        <label>Bad</label>
