--- a/index.html
+++ b/index.html
@@ -189,15 +189,15 @@
      <form id="frmcheckout">
 	  <div data-role="fieldcontain">
 	    <label for="textinput">Contact Person:</label>
-	    <input type="text" name="contactperson" id="textinput" value=""  class='required' />
+	    <input type="text" name="contactperson" id="contactperson" value=""  class='required' />
       </div>
 	  <div data-role="fieldcontain">
 	    <label for="textinput2">Contact Phone:</label>
-	    <input type="text" name="contactphone" id="textinput2" value=""  class='required' />
+	    <input type="text" name="contactphone" id="contactphone" value=""  class='required' />
       </div>
 	  <div data-role="fieldcontain">
 	    <label for="textarea">Address Description:</label>
-	    <textarea cols="40" rows="8" name="address" id="textarea" class='required'></textarea>
+	    <textarea cols="40" rows="8" name="address" id="address" class='required'></textarea>
 	    </div>
         
 	  <div class='pull-right'>
