--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
       </div>
 	  <div data-role="fieldcontain">
 	    <label for="textinput2">Contact Phone:</label>
-	    <input type="tel" pattern="[0-9]*" name="contactphone" id="contactphone" value=""  class='required' />
+	    <input type="tel" pattern="[0-9]*" name="contactphone" id="contactphone" value=""  class='required number' />
       </div>
 	  <div data-role="fieldcontain">
 	    <label for="textarea">Address Description:</label>
@@ -225,7 +225,7 @@
      <form id="frmpayments">
 	  <div data-role="fieldcontain">
 	    <label for="textinput">M-Pesa mobile number:</label>
-	    <input type="text" name="mpesaphone" id="textinput" value=""  class='required' />
+	    <input type="tel" name="mpesaphone" id="textinput" value=""  class='required number' />
       </div>
 	  <div data-role="fieldcontain">
 	    <label for="textinput2">M-Pesa Confirmation Code:</label>
@@ -267,11 +267,11 @@
     </div>
     <div data-role="fieldcontain">
       <label for="textinput5">Email:</label>
-      <input type="text" name="email" id="textinput5" value="" class='required' />
+      <input type="text" name="email" id="textinput5" value="" class='required email' />
     </div>
     <div data-role="fieldcontain">
       <label for="textinput6">Phone:</label>
-      <input type="text" name="phone" id="textinput6" value="" class='required' />
+      <input type="tel" name="phone" id="textinput6" value="" class='required number' />
       <input name="cust_id" id="customer_id" class="cust_id"  value="" type="hidden">
     </div>
     
