--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                     <label class="control-label" for="input-quantity">
                                         Qty
                                     </label>
-                                    <input name="quantity" data-role="none" value="1" size="2" id="input-quantity" class="form-control" type="text">
+                                    <input name="quantity" data-role="none" value="1" size="2" id="input-quantity" class="form-control number" type="tel">
                                     <input name="product_id" class="product_id" value="" type="hidden">
                                     <input name="cust_id" id="customer_id" class="cust_id"  value="" type="hidden">
                                     <br>
